// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing snapshot for actions-schematic destination: identifyUser action - all fields 1`] = `
Object {
  "api_key": "G10lVP",
  "body": Object {
    "company": Object {
      "keys": Object {
        "testType": "G10lVP",
      },
      "name": "G10lVP",
      "traits": Object {
        "testType": "G10lVP",
      },
    },
    "keys": Object {
      "testType": "G10lVP",
    },
    "name": "G10lVP",
    "traits": Object {
      "testType": "G10lVP",
    },
  },
  "sent_at": "2023-01-01T00:00:00.000Z",
  "type": "identify",
}
`;

exports[`Testing snapshot for actions-schematic destination: identifyUser action - required fields 1`] = `
Object {
  "api_key": "G10lVP",
  "body": Object {
    "company": Object {
      "keys": Object {
        "testType": "G10lVP",
      },
    },
    "keys": Object {
      "testType": "G10lVP",
    },
  },
  "sent_at": "2023-01-01T00:00:00.000Z",
  "type": "identify",
}
`;

exports[`Testing snapshot for actions-schematic destination: trackEvent action - all fields 1`] = `
Object {
  "api_key": "uvfeUI#M",
  "body": Object {
    "company": Object {
      "testType": "uvfeUI#M",
    },
    "event": "uvfeui#m",
    "traits": Object {
      "raw_event_name": "uvfeUI#M",
    },
    "user": Object {
      "testType": "uvfeUI#M",
    },
  },
  "sent_at": "2023-01-01T00:00:00.000Z",
  "type": "track",
}
`;

exports[`Testing snapshot for actions-schematic destination: trackEvent action - required fields 1`] = `
Object {
  "api_key": "uvfeUI#M",
  "body": Object {
    "event": "uvfeui#m",
  },
  "sent_at": "2023-01-01T00:00:00.000Z",
  "type": "track",
}
`;
